Fix overflow issues with legends on IE

--- a/app/assets/stylesheets/barnardos/_datefield.scss
+++ b/app/assets/stylesheets/barnardos/_datefield.scss
@@ -12,7 +12,7 @@
 }
 
 .datefield__label {
-  display: block;
+  display: inline-block;
   font-weight: normal;
   color: $black;
   margin-top: $gutter / 2;
